@@ -75,7 +75,7 @@ our %CONFIG = (
 	'PROGRAM_VERSION' => '0.64.0',
 	'PROGRAM_DATE' => '2013-xx-xx',
 	'PROGRAM_BETA' => 1,
-	'PROGRAM_DBVERSION' => '1.5',
+	'PROGRAM_DBVERSION' => '1.6',
 	'PROGRAM_WEBSITE' => 'http://www.pdlna.com',
 	'PROGRAM_AUTHOR' => 'Stefan Heumader',
 	'PROGRAM_DESC' => 'Perl DLNA MediaServer',
